改登陆为登录

--- a/icehockey_ServerV3/WebContent/logining.html
+++ b/icehockey_ServerV3/WebContent/logining.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">	
-		<title>初始登陆页面</title>
+		<title>初始登录页面</title>
 		<link rel="stylesheet" href="css/login/logining.css" />
 		<link rel="stylesheet" href="css/jqueryMobile/jquery.mobile-1.4.5.min.css"/>
 		<script src="js/jQuery/jquery-2.2.3.min.js"></script>
@@ -44,7 +44,7 @@ user-scalable - 用户是否可以手动缩放
 				  <a href="#" data-role="button"  class="buttonone">
 				  	<img src="images/weixin.png" />
 				  	<span >微信登录</span></a>
-				  <a href="views/login.html"  class="buttontwo" data-role="button"  data-ajax="false">其它登陆方式</a>
+				  <a href="views/login.html"  class="buttontwo" data-role="button"  data-ajax="false">其它登录方式</a>
 		 	</div>
 		  </div>
 </div>
